plugins { id 'application' }

repositories { mavenCentral() }

dependencies {
  implementation 'org.jmonkeyengine:jme3-core:3.6.1-stable'
  implementation 'org.jmonkeyengine:jme3-desktop:3.6.1-stable'
  implementation 'org.jmonkeyengine:jme3-effects:3.6.1-stable'
  implementation 'org.jmonkeyengine:jme3-lwjgl3:3.6.1-stable'
  implementation 'org.jmonkeyengine:jme3-plugins:3.6.1-stable'
  implementation 'org.jmonkeyengine:jme3-jogg:3.6.1-stable'
  implementation 'org.jmonkeyengine:jme3-networking:3.6.1-stable'
  implementation 'org.jmonkeyengine:jme3-jbullet:3.6.1-stable'
  implementation 'org.jmonkeyengine:jme3-terrain:3.6.1-stable'
}

application {
  mainClass = 'net.limitmedia.pong3d.Main'
  applicationDefaultJvmArgs = ['--enable-native-access=ALL-UNNAMED']
}

tasks.withType(JavaCompile).configureEach {
  options.encoding = 'UTF-8'
  sourceCompatibility = '17'
  targetCompatibility = '17'
}